--- a/npcs/dimri_clodhopper.yaml
+++ b/npcs/dimri_clodhopper.yaml
@@ -1,3 +1,71 @@
+#
+# Vibrant Games NPC file format.
+#
+# For long fields, we should be able to embed <html-tag>...</html-tag>s,
+# if everyone is cool with that approach.  OR we could use markdown instead.
+#
+# HTML requires more discipline -- we need to come up with a CSS stylesheet,
+# and stick to using the styles defined in our stylesheet.  Markdown is
+# simpler, because we can convert and automagically apply the stylesheet.
+#
+# Long fields are of the form:
+#
+#     field: |
+#       TEMPLATE
+#       MORE TEMPLATE
+#
+# For example, with HTML tags:
+#
+#     field: |
+#       <p> Gorbonzonger the goblin is a very bad goblin.
+#       He likes to beat up kobolds. </p>
+#       <p class="small"> Kobolds deserve it, anyway. </p>
+#       <p> Gorbonzonger has an amulet made of camphor
+#       and a very long shopping list that contains many
+#       items, some very few of which include: </p>
+#       <ul>
+#       <li> toilet paper </li>
+#       <li> broccoli </li>
+#       </ul>
+#
+# Or with Markdown:
+#
+#     field: |
+#       Gorbonzonger the goblin is a very bad goblin.  He likes to beat up kobolds.
+#       Kobolds deserve it, anyway.
+#       Gorbonzonger has an amulet made of camphor and a very long shopping list that contains many items, some very few of which include:
+#       - toilet paper
+#       - broccoli
+#
+# (There might be other formatting systems worth considering, too!)
+#
+
+#
+# Currently there is no schema for this template.
+# It will take some time to create a validating schema, so that,
+# for example, many fields are optional, but some fields are
+# required; enumerated fields are only allowed to have certain
+# values; and so on.
+#
+# Once the validating schema is created (probably using
+# Open API syntax, unless anyone has any preferences), we'll
+# be able to validate submissions and accept / reject if we choose.
+#
+# Also the validating file format is the ONLY place we do
+# content validation.  The database and user interface remain
+# agnostic to the validation rules (although the submission
+# UI will be set up to make it easy to e.g. pull down enumerated
+# values).  This allows us to change the schema in ONE PLACE
+# ONLY, not have to modify multiple components (UI, database,
+# future mobile apps, etc).  The file format validator is
+# the arbiter of what's allowed and what isn't.
+#
+
+#
+# Template NPC:
+#
+
+---
 
 #
 # Preliminary fields that describe this overall file:
@@ -20,28 +88,22 @@ metadata:
   #
   # The name of the submitter (your name).
   #
-  author: vibrantgames
+  author: Mike Rigby
 
   #
   # Email address of the submitter.
   #
-  # WordPress to YAML conversion:
-  # Unfortunately I do not see the author email
-  # addresses anywhere in the export file.  :(
-  # I guess we decided it was not an important field.
-  # This was a pretty bad oversigh.  :(
-  #
-  email: UNKNOWN@example.com
+  email: rigbyma@hotmail.com
 
   #
   # Date the NPC was created.
   # Must be in ISO 8601 format.
   # You can include the time if you want.
   #
-  # E.g. 2021-12-31
-  #      2021-12-31 23:59:59
+  # E.g. "2021-12-31"
+  #      "2021-12-31 23:59:59"
   #
-  date: 2021-02-13 14:23:24
+  date: "2021-05-25"
 
   #
   # Arbitrary labels that are opaque to the system, only
@@ -51,7 +113,9 @@ metadata:
   # Optional.
   #
   labels:
-  - wordpress_id: 1515
+  - label_template_1: TEMPLATE
+  - label_template_2: TEMPLATE
+  - label_template_3: TEMPLATE
 
   #
   # In future more metadata will likely be needed.
@@ -82,7 +146,7 @@ npc:
   # For now let us keep all images in one directory,
   # at least until that becomes a scaling nightmare.
   #
-  # image: NO_ARTWORK_AT_TIME_OF_CONVERSION
+  image: TEMPLATE_McTEMPLATESON.jpg
 
   #
   # Race, class, etc.
@@ -123,7 +187,7 @@ npc:
     # Required.
     # Max length: ...
     #
-    race: other (you will be asked to specify)
+    race: Satyr
 
     #
     # The sub-race can be anything.
@@ -132,7 +196,7 @@ npc:
     # Optional.  Can be commented out.
     # Max length: ...
     #
-    # sub-race: NONE.
+    sub-race: N/A
 
     #
     # Pronouns (case insensitive):
@@ -159,7 +223,7 @@ npc:
     # - artificer
     # - barbarian
     # - bard
-    # - bloodhunter
+    # - blood hunter
     # - cleric
     # - druid
     # - fighter
@@ -174,7 +238,30 @@ npc:
     #
     # Required.
     #
-    class: bard
+    class: Bard
+
+    #
+    # D & D subclasses (case insensitive):
+    # - civilian
+    # - alchemist
+    # - Path of the Berserker
+    # - College of Lore
+    # - Order of the Profane Soul
+    # - Grave Domain
+    # - Cirlce of the Moon
+    # - Battle Master
+    # - Way of Shadow
+    # - Oath of Redemption
+    # - Gloom Stalker
+    # - Thief
+    # - Path of the Spirit
+    # - Aberrant Mind
+    # - Hexblade
+    # - School of Abjuration
+    #
+    # Required.
+    #
+    subclass: College of Glamour
 
     #
     # Class level.
@@ -199,7 +286,7 @@ npc:
     #
     # Required.
     #
-    alignment: chaotic good
+    alignment: Chaotic Good
 
     #
     # Alignment tendencies:
@@ -207,6 +294,8 @@ npc:
     #
     # Optional.
     #
+    tendencies:
+    - N/A
 
     #
     # Languages the character speaks
@@ -234,8 +323,7 @@ npc:
     #   role: Associate Professor of Lockpicking
     # - id: union_of_seamstresses
     #   name: Union of Seamstresses
-    #   role: Window dressing
-    # - id: cult_of_sky_anthologies
+    #   role: Window dressing    # - id: cult_of_sky_anthologies
     #   name: Cult of Sky Anthologies
     #   role: Going Clear Sky pastor
     #
@@ -252,6 +340,10 @@ npc:
     #
     # Optional.  0 or more.
     #
+    adjectives:
+    - Racous
+    - Entusiastic
+    - Lazy    
 
   improv:
 
@@ -266,7 +358,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    introduction: Through a break in the crowd dances an undersized satyr, Slapping a horn of wine into your hand, he cries "To Xenagos!"
+    introduction:  Through a break in the crowd dances an undersized satyr, Slapping a horn of wine into your hand, he cries /"To Xenagos!/"
 
     #
     # Appearance: a brief description of the character skin, clothes, hair, eyes, etc.
@@ -277,7 +369,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    appearance:   Short and chubby with flaming red hair on both his head and legs. Short but sharp horns and rarely without a drink
+    appearance:  Short and chubby with flaming red hair on both his head and legs. Short but sharp horns and rarely without a drink
 
     #
     # Expressions: things the character says all the time, making their speech distinctive.
@@ -293,7 +385,10 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions: $characters$ "Come! You must join the Revel!", "Ooooh I'll take a piece of that!", "Aren't you the prettiest thing I ever did see!"
+    expressions:  
+    - "Come! You must join the Revel!"
+    - "Ooooh I'll take a piece of that!"
+    - "Aren't you the prettiest thing I ever did see!"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -342,7 +437,7 @@ npc:
     # Required.
     # ???Maximum length???
     #
-    secrets: |
+    secrets: | 
       none... that he remembers
 
   #
@@ -369,34 +464,42 @@ npc:
   #
   specialties:
     skills:
-    - He's an accomplished lute player and storyteller
-    special-abilities: |
-      Satyr Traits:
-      Fey
-      Ram
-      Magic Resistance
-      Mirthful Leaps
-      Reveler
-      |
-      Bard Traits:
-      Bard Spellcasting
-      Bardic Inspiration
-      Jack of All Trades
-      Song of Rest
-      Expertise in Performance and Persuasion
-      |
-      College of Glamour:
-      Mantle of Inspiration
-      Enthralling Performance
+    - Satyr Abilities:
+      - Fey: Your creature type is fey, rather than humanoid           
+        Ram: You can use your head and horns to make unarmed strikes. If you hit with them, you deal bludgeoning damage equal to 1d4 + your Strength modifier
+        Magic Resistance: You have advantage on saving throws against spells and other magical effects
+        Mirthful Leap: Whenever you make a long or high jump, you can roll a d8 and add the number to the number of feet you cover, even when making a standing jump. This extra distance costs movement as normal
+        Reveler: You have proficiency in the Performance and Persuasion skills, and you have proficiency with a Pipe Flute
+      Bard Abilities:
+      - Bard Spellcasting:
+        - Description: Spell DC 14
+          Cantrip: Minor Illusion, Vicious Mockery
+          1st Level: Bane, Charm Person, Faerie Fire, Tasha's Hideous Laughter 
+          2nd Level: Heat Metal, Enthrall
+        Bardic Inspiration: Can use a Bonus Action on their Turn to choose one creature other than themself within 60 feet of, who can hear them. That creature gains one Bardic Inspiration die, a d6. Once within the next 
+                            10 minutes, the creature can roll the die and add the number rolled to one ability check, Attack roll, or saving throw it makes.
+        Jack of All Trades: can add half their Proficiency Bonus, rounded down, to any ability check they make that doesn't already include their Proficiency Bonus
+        Song of Rest: If they or any friendly creatures who can hear their Performance regain Hit Points by spending Hit Dice at the end of the Short Rest, each of those creatures regains an extra 1d6 Hit Points.
+      College of Glamour Abilities:
+      - Mantle of Inspiration: As a bonus action, you can expend one use of your Bardic Inspiration to grant yourself a wondrous appearance. When you do so, choose a number of creatures you can see and who can see you within 60
+                              feet of you, up to a number equal to your Charisma modifier (minimum of one). Each of them gains 5 temporary hit points. When a creature gains these temporary hit points, it can immediately use its 
+                               reaction to move up to its speed, without provoking opportunity attacks. The number of temporary hit points increases when you reach certain levels in this class, increasing to 8 at 5th level, 11 at 
+                               10th level, and 14 at 15th level.   
+        Enthralling Performance: If you perform for at least 1 minute, you can attempt to inspire wonder in your audience by singing, reciting a poem, or dancing. At the end of the performance, choose a number of humanoids 
+                                 within 60 feet of you who watched and listened to all of it, up to a number equal to your Charisma modifier (minimum of one). Each target must succeed on a Wisdom saving throw against your spell
+                                 save DC or be charmed by you. While charmed in this way, the target idolizes you, it speaks glowingly of you to anyone who speaks to it, and it hinders anyone who opposes you, avoiding violence
+                                 unless it was already inclined to fight on your behalf. This effect ends on a target after 1 hour, if it takes any damage, if you attack it, or if it witnesses you attacking or damaging any of
+                                 its allies. If a target succeeds on its saving throw, the target has no hint that you tried to charm it.                         
+
+    special-abilities:
+    - Proficiencies: Mason's Tools, Master Mason    
     attacks: |
-      Headbutt
-      |
-      Fists and hooves
+      2 attacks with Headbutts, Fists and Hooves
     combat-tactics: |
       He has zero tactics for anything in his life
     special-equipment:
     - Wine Skin that is never empty
-
+                                                                   
   profile:
 
     #
@@ -407,7 +510,9 @@ npc:
     # No length limit for now.
     #
     background-story: |
-      Dimri, or Clodhopper as his friends call him, (and everyone is his friend) is the life of the party. And in satyr society, that's saying something! Friendly, outgoing, gregarious and boisterous, he has never met a wine he wouldn't drink or a creature he wouldn't sleep with. He lives for the revels and despite being an accomplished musician, would rather lead the crowd in a traditional singalong, than pursue an actual career in it. If it's not part of the party, he's just not interested, though he will happily share his life's philosophy with anyone who will listen
+      Dimri, or Clodhopper as his friends call him, (and everyone is his friend) is the life of the party. And in satyr society, that's saying something! Friendly, outgoing, gregarious and boisterous, he has never met a wine he
+      wouldn't drink or a creature he wouldn't sleep with. He lives for the revels and despite being an accomplished musician, would rather lead the crowd in a traditional singalong, than pursue an actual career in it. If it's
+      not part of the party, he's just not interested, though he will happily share his life's philosophy with anyone who will listen
 
     #
     # Personality (or something like that):
@@ -417,16 +522,6 @@ npc:
     # Required.
     # No length limit for now.
     #
-
-  #
-  # Content that does not get displayed, but could be useful
-  # to humans.  Includes review comments, notes about what to
-  # do for the NPC art, or whatever else we need.
-  #
-  # Optional.
-  #
-  uncategorized:
-  - wp:status: publish
-  - other: Satyr
-  - _yoast_wpseo_focuskeywords: []
-  - _yoast_wpseo_keywordsynonyms: [""]
+    personality: |
+      Short and chubby with flaming red hair on both his head and legs. Short but sharp horns and rarely without a drink
+  
