--- a/npcs/elenda_broadtoe.yaml
+++ b/npcs/elenda_broadtoe.yaml
@@ -215,8 +215,9 @@ npc:
     # Max length per occupation: ...
     #
     occupation:
-    - Tavern Owner, Bartender, Entertainer
-    
+    - Tavern Owner
+    - Bartender
+    - Entertainer
 
     #
     # D & D classes (case insensitive):
@@ -324,7 +325,7 @@ npc:
     # - id: thieves_guild_of_poliwood
     #   name: Thieves Guild of Poliwood
     #   role: Associate Professor of Lockpicking
-    # - id: union_of_seamstresses
+    # - id: unionof_seamstresses
     #   name: Union of Seamstresses
     #   role: Window dressing    # - id: cult_of_sky_anthologies
     #   name: Cult of Sky Anthologies
@@ -360,7 +361,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    introduction:  A pretty halfling takes the stage in the pub. "Welcome to my fine tavern. I'm gonna play a couple songs for you tonight
+    introduction:  A pretty halfling takes the stage in the pub. /"Welcome to my fine tavern. I'm gonna play a couple songs for you tonight/"
 
     #
     # Appearance: a brief description of the character skin, clothes, hair, eyes, etc.
@@ -387,7 +388,9 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "I learned this ditty from back home". "Enjoy our hospitality, and tip your servers well"
+    expressions:  
+    - "I learned this ditty from back home"
+    - "Enjoy our hospitality, and tip your servers well"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -411,7 +414,7 @@ npc:
     #
     motivations: |
       Enjoys entertaining and helping others enjoy themselves
-      
+
     #
     # Passions:
     #
@@ -420,7 +423,7 @@ npc:
     #
     passions: |
       Music, art and strong wine
-      
+
     #
     # Vulnerabilities:
     #
@@ -429,7 +432,7 @@ npc:
     #
     vulnerabilities: |
       She's been known to have a few too many drinks and make bad decisions
-      
+
     #
     # Secrets:
     #
@@ -438,8 +441,7 @@ npc:
     #
     secrets: | 
       She's pretty knowledgeable about everything going on around town
-       
-      
+
   #
   # The D & D stats block:
   # All integers.
@@ -464,44 +466,42 @@ npc:
   #
   specialties:
     skills:
-   - - Halfling Abilities:
-       - Lucky: When rolling a 1 on The D20 for an Attack roll, ability check, or saving throw, can reroll the die and must use the new roll           
-       - Brave: Has advantage on Saving Throws against being Frightened 
-       - Halfling Nimbleness: can move through the space of any creature that is of a size larger than her
-                       
-   - - Lightfoot Abilities:
-       - Naturally Stealthy: You can attempt to hide even when you are obscured only by a creature that is at least one size larger than you
-                       
-   - - Bard Abilities:
-       - Bard Spellcasting: Spell DC 16
-           Cantrip: Mage Hand, Vicious Mockery, Minor Illusion, Dancing Lights
-           1st Level: Charm Person, Faerie Fire, Tasha's Hideous Laughter, Disguise Self 
-           2nd Level: Enthrall, Heat Metal, Invisibility
-           3rd Level: Hypnotic Pattern, Tongues, Major Image
-       - Bardic Inspiration: Can use a Bonus Action on their Turn to choose one creature other than themself within 60 feet of, who can hear them. That creature gains one Bardic Inspiration die, a d6. Once within the next 
-                             10 minutes, the creature can roll the die and add the number rolled to one ability check, Attack roll, or saving throw it makes.
-       - Jack of All Trades: can add half their Proficiency Bonus, rounded down, to any ability check they make that doesn't already include their Proficiency Bonus
-       - Song of Rest: If they or any friendly creatures who can hear their Performance regain Hit Points by spending Hit Dice at the end of the Short Rest, each of those creatures regains an extra 1d6 Hit Points.
-       - Font of Inspiration: they regain all of their expended uses of Bardic Inspiration when they finish a short or Long Rest
-       - Countercharm: As an action, they can start a Performance that lasts until the end of their next turn. During that time, them and any friendly creatures within 30 feet of them have advantage on Saving Throws against 
-                       being Frightened or Charmed
- 
-   - - College of Eloquence Abilities:
-       - Silver Tongue: you are a master at saying the right thing at the right time. When you make a Charisma (Persuasion) or Charisma (Deception) check, you can treat a d20 roll of 9 or lower as a 10 
-       - Unsettling Words: you can spin words laced with magic that unsettle a creature and cause it to doubt itself. As a bonus action, you can expend one use of your Bardic Inspiration and choose one creature you can see
-                           within 60 feet of you. Roll the Bardic Inspiration die. The creature must subtract the number rolled from the next saving throw it makes before the start of your next turn
-       - Unfailing Inspiration: your inspiring words are so persuasive that others feel driven to succeed. When a creature adds one of your Bardic Inspiration dice to its ability check, attack roll, or saving throw and the roll
-                                fails, the creature can keep the Bardic Inspiration die       
-       
+    - Halfling Abilities:
+      - Lucky: When rolling a 1 on The D20 for an Attack roll, ability check, or saving throw, can reroll the die and must use the new roll
+        Brave: Has advantage on Saving Throws against being Frightened
+        Halfling Nimbleness: can move through the space of any creature that is of a size larger than her
+      Lightfoot Abilities:
+      - Naturally Stealthy: You can attempt to hide even when you are obscured only by a creature that is at least one size larger than you
+      Bard Abilities:
+      - Bard Spellcasting:
+        - Description: Spell DC 16
+          Cantrip: Mage Hand, Vicious Mockery, Minor Illusion, Dancing Lights
+          1st Level: Charm Person, Faerie Fire, Tasha's Hideous Laughter, Disguise Self 
+          2nd Level: Enthrall, Heat Metal, Invisibility
+          3rd Level: Hypnotic Pattern, Tongues, Major Image
+        Bardic Inspiration: Can use a Bonus Action on their Turn to choose one creature other than themself within 60 feet of, who can hear them. That creature gains one Bardic Inspiration die, a d6. Once within the next
+                            10 minutes, the creature can roll the die and add the number rolled to one ability check, Attack roll, or saving throw it makes.
+        Jack of All Trades: can add half their Proficiency Bonus, rounded down, to any ability check they make that doesn't already include their Proficiency Bonus
+        Song of Rest: If they or any friendly creatures who can hear their Performance regain Hit Points by spending Hit Dice at the end of the Short Rest, each of those creatures regains an extra 1d6 Hit Points.
+        Font of Inspiration: they regain all of their expended uses of Bardic Inspiration when they finish a short or Long Rest
+        Countercharm: As an action, they can start a Performance that lasts until the end of their next turn. During that time, them and any friendly creatures within 30 feet of them have advantage on Saving Throws against 
+                      being Frightened or Charmed
+      College of Eloquence Abilities:
+      - Silver Tongue: you are a master at saying the right thing at the right time. When you make a Charisma (Persuasion) or Charisma (Deception) check, you can treat a d20 roll of 9 or lower as a 10 
+        Unsettling Words: you can spin words laced with magic that unsettle a creature and cause it to doubt itself. As a bonus action, you can expend one use of your Bardic Inspiration and choose one creature you can see
+                          within 60 feet of you. Roll the Bardic Inspiration die. The creature must subtract the number rolled from the next saving throw it makes before the start of your next turn
+        Unfailing Inspiration: your inspiring words are so persuasive that others feel driven to succeed. When a creature adds one of your Bardic Inspiration dice to its ability check, attack roll, or saving throw and the roll
+                               fails, the creature can keep the Bardic Inspiration die
+
     special-abilities:
-    - Proficiencies: Persuasion, Deception, Insight   
+    - Proficiencies: Persuasion, Deception, Insight
     attacks: |
       1 attack with short sword
     combat-tactics: |
       She's a lover not a fights and will try to charm away situations before they start
     special-equipment:
      - Short Sword
-                                                                   
+
   profile:
 
     #
@@ -516,7 +516,6 @@ npc:
       place. She loves putting smiles on peoples faces and it shows in her success. It's a small place, like her, but business is good. She has a beautiful singing voice and is a skilled musician in addition to her
       business acumen. Her energy is contagious and her crowds swell with her joy.  She has however been known to enjoy a little too much wine from time to time and make unwise decisions.
 
-      
     #
     # Personality (or something like that):
     # Expand on the introduction, appearance, expressions, mannerisms, etc.
@@ -527,32 +526,4 @@ npc:
     #
     personality: |
       Short and pretty with long brown hair tied in braided circle. Wearing a loose-fitting silk blouse and leather pants
-  #
-  # Content that does not get displayed, but could be useful
-  # to humans.  Includes review comments, notes about what to
-  # do for the NPC art, or whatever else we need.
-  #
-  # Optional.
-  #
-  uncategorized:
-  - uncategorized_template_1: TEMPLATE
-  - uncategorized_template_2: |
-    TEMPLATE
-    MORE TEMPLATE
-  - uncategorized_template_3: TEMPLATE
----
-
-#
-# ...Multiple NPCs can be included in one file,
-# separated by --- dividers...
-#
-© 2021 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
+  
